tests/paczka1/small_fuzzy/10833239.err
Error in line 2: X4RUlwrXOW A955 22,8
Error in line 3: X4RUlwrXOW S264 26,3
Error in line 4: 11SDN1rOwy S187 98,7
